--- a/index.html
+++ b/index.html
@@ -6,45 +6,56 @@
         <title>vNest</title>
     </head>
     <body>
-        <script type="module">
-            import vNest from 'https://cdn.jsdelivr.net/npm/vnest@1.0.0/vNest.min.js'
-            import facts from 'https://raw.githubusercontent.com/angleisokay/vNest/refs/heads/main/fun-facts.js'
-            function getRandomInt(max) {
-                return Math.floor(Math.random() * max);
-            }
-            const homepage = vNest.createPage()
-            document.body.appendChild(homepage.page)
-            homepage.docStyle({
-                'background-color': 'darkgray',
-                'color': 'white'
+    <script type="module">
+      (async () => {
+        const { default: vNest } = await import('https://cdn.jsdelivr.net/npm/vnest@1.0.0/vNest.min.js')
+
+        const facts = await fetch('https://raw.githubusercontent.com/angleisokay/vNest/refs/heads/main/fun-facts.js')
+          .then(res => res.text())
+          .then(text => eval(text))
+
+        function getRandomInt(max) {
+          return Math.floor(Math.random() * max)
+        }
+
+        const homepage = vNest.createPage()
+        document.body.appendChild(homepage.page)
+
+        homepage.docStyle({
+          'background-color': 'darkgray',
+          'color': 'white'
+        })
+
+        homepage.createElement('h1', { 
+          textContent: 'vNest: Velox\'s DOM manipulation package', 
+          id: 'hpTitle',
+          style: {
+            'font-family': 'sans-serif'
+          }
+        })
+
+        homepage.createElement('h3', {
+          textContent: '`Fun fact: This page was made with vNest!`',
+          id: 'hpFunFact',
+          style: {
+            'font-family': 'monospace'
+          }
+        })
+
+        homepage.createElement('button', {
+          textContent: 'Regenerate fun fact',
+          id: 'hpFactButton',
+          style: {
+            'font-family': 'serif'
+          },
+          clickAction: () => {
+            homepage.modifyProperty('hpFunFact', {
+              'text-content': facts[getRandomInt(49)]
             })
-            homepage.createElement('h1', { 
-              textContent: 'vNest: Velox\'s DOM manipulation package', 
-              id: 'hpTitle',
-              style: {
-                'font-family': 'sans-serif'
-              }
-            })
-            homepage.createElement('h3', {
-              textContent: '`Fun fact: This page was made with vNest!`',
-              id: 'hpFunFact',
-              style: {
-                'font-family': 'monospace'
-              }
-            })
-            homepage.createElement('button', {
-              textContent: 'Regenerate fun fact',
-              id: 'hpFactButton',
-              style: {
-                'font-family': 'serif'
-              },
-              clickAction: () => {
-                 homepage.modifyProperty('hpFunFact', {
-                   'text-content': facts[getRandomInt(49)]
-                 })
-              }
-            })
-        </script>
+          }
+        })
+      })()
+    </script>
 
     </body>
 </html>
